--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-body {
-  background: #fafafa;
-  margin: 0;
-  padding: 0;
-}
-
-canvas {
-  background: #eee;
-  display: block;
-  margin: 40px auto;
-  border: 2px solid #333;
-  box-shadow: 0 0 20px #bbb;
+canvas{ 
+  border: 1px solid black;
 }
